# hpx_bench

./: .gitignore  README.md
black_scholes/: CMakeLists.txt  common.hpp  hpx.cpp  main.hpp  omp.cpp  tbb_bench.cpp
miniBUDE/: CMakeLists.txt  bude.h  clean.sh  hpx.cpp  hpx_fj.cpp  hpx_fj_simd.cpp  hpx_fj_std_simd.cpp  hpx_hierarchical.cpp  hpx_hierarchical_16.cpp  hpx_hierarchical_2.cpp  hpx_hierarchical_3.cpp  hpx_hierarchical_32.cpp  hpx_hierarchical_5.cpp  hpx_hierarchical_6.cpp  hpx_simd.cpp  hpx_static_cs.cpp  hpxmp.cpp  hpxmp_simd.cpp  omp.cpp  omp_simd.cpp  plot.py  run.py  run.sh  seq.cpp  simd.cpp  tbb_bench.cpp
miniBUDE/results/a64fx/bm1/: hpx.csv  hpx_fj.csv  hpx_fj_simd.csv  hpx_simd.csv  omp.csv  omp_simd.csv  seq.csv
miniBUDE/results/a64fx_48T_neon_ffast_math/bm1/: hpx.csv  hpx_fj.csv  hpx_fj_simd.csv  hpx_simd.csv  omp.csv  omp_simd.csv  seq.csv
miniBUDE/results/a64fx_48T_neon_ffast_math_simd/bm1/: hpx.csv  hpx_fj.csv  hpx_fj_simd.csv  hpx_fj_std_simd.csv  hpx_simd.csv  omp.csv  omp_simd.csv  seq.csv
miniBUDE/results/a64fx_48T_sve512_ffast_math/bm1/: hpx.csv  hpx_fj.csv  hpx_fj_simd.csv  hpx_simd.csv  omp.csv  omp_simd.csv  seq.csv
miniBUDE/results/a64fx_48T_sve512_ffast_math_simd/bm1/: hpx.csv  hpx_fj.csv  hpx_fj_simd.csv  hpx_fj_std_simd.csv  hpx_simd.csv  omp.csv  omp_simd.csv  seq.csv
miniBUDE/results/a64fx_neon/bm1/: hpx.csv  hpx_fj.csv  hpx_fj_simd.csv  hpx_simd.csv  omp.csv  omp_simd.csv  seq.csv
miniBUDE/results/a64fx_neon_ffast_math_with_hpxmp/bm1/: hpx.csv  hpx_fj.csv  hpx_fj_simd.csv  hpx_simd.csv  hpxmp.csv  hpxmp_simd.csv  omp.csv  omp_simd.csv  seq.csv
miniBUDE/results/a64fx_sve512/bm1/: hpx.csv  hpx_fj.csv  hpx_fj_simd.csv  hpx_simd.csv  omp.csv  omp_simd.csv  seq.csv
miniBUDE/results/a64fx_sve512_ffast_math_with_hpxmp/bm1/: hpx.csv  hpx_fj.csv  hpx_fj_simd.csv  hpx_simd.csv  hpxmp.csv  hpxmp_simd.csv  omp.csv  omp_simd.csv  seq.csv
miniBUDE/results/amd7763_64Tx2_avx2/bm1/: hpx.csv  hpx_fj.csv  hpx_fj_simd.csv  hpx_simd.csv  omp.csv  omp_simd.csv  seq.csv
miniBUDE/results/amd7763_64Tx2_avx2_ffast_math/bm1/: hpx.csv  hpx_fj.csv  hpx_fj_simd.csv  hpx_simd.csv  omp.csv  omp_simd.csv  seq.csv
miniBUDE/results/amd7763_64Tx2_avx2_ffast_math/bm2/: hpx.csv  hpx_fj.csv  hpx_fj_simd.csv  hpx_simd.csv  omp.csv  omp_simd.csv  seq.csv
miniBUDE/results/amd7763_64Tx2_avx2_ffast_math_hierarchichal/bm1/: hpx.csv  hpx_fj.csv  hpx_hierarchical_16.csv  hpx_hierarchical_2.csv  hpx_hierarchical_3.csv  hpx_hierarchical_32.csv  hpx_hierarchical_4.csv  hpx_hierarchical_5.csv  hpx_hierarchical_6.csv  hpx_master.csv  seq.csv
miniBUDE/results/amd7763_64Tx2_avx2_ffast_math_simd/bm1/: hpx.csv  hpx_fj.csv  hpx_fj_simd.csv  hpx_fj_std_simd.csv  hpx_simd.csv  omp.csv  omp_simd.csv  seq.csv
miniBUDE/results/amd7763_64Tx2_avx2_ffast_math_with_hpxmp/bm1/: hpx.csv  hpx_fj.csv  hpx_fj_simd.csv  hpx_simd.csv  hpxmp.csv  hpxmp_simd.csv  omp.csv  omp_simd.csv  seq.csv
miniBUDE/results/apple_mac_m2_neon/bm1/: hpx.csv  hpx_fj.csv  hpx_fj_simd.csv  hpx_simd.csv  omp.csv  omp_simd.csv  seq.csv
miniBUDE/results/intel_6148_20Tx2_avx512/bm1/: hpx.csv  hpx_fj.csv  hpx_fj_simd.csv  hpx_simd.csv  omp.csv  omp_simd.csv  seq.csv
miniBUDE/results/intel_8358_32Tx2_avx512/bm1/: hpx.csv  hpx_fj.csv  hpx_fj_simd.csv  hpx_simd.csv  omp.csv  omp_simd.csv  seq.csv
miniBUDE/results/intel_8358_32Tx2_avx512_ffast_math/bm1/: hpx.csv  hpx_fj.csv  hpx_fj_simd.csv  hpx_simd.csv  omp.csv  omp_simd.csv  seq.csv
miniBUDE/results/intel_8358_32Tx2_avx512_ffast_math/bm2/: hpx.csv  hpx_fj.csv  hpx_fj_simd.csv  hpx_simd.csv  omp.csv  omp_simd.csv  seq.csv
miniBUDE/results/intel_8358_32Tx2_avx512_ffast_math_simd/bm1/: hpx.csv  hpx_fj.csv  hpx_fj_simd.csv  hpx_fj_std_simd.csv  hpx_simd.csv  omp.csv  omp_simd.csv  seq.csv
miniBUDE/results/intel_8358_32Tx2_avx512_ffast_math_with_hpxmp/bm1/: hpx.csv  hpx_fj.csv  hpx_fj_simd.csv  hpx_simd.csv  hpxmp.csv  hpxmp_simd.csv  omp.csv  omp_simd.csv  seq.csv
miniBUDE/results/intel_8358_32Tx2_avx512_ffast_math_with_hpxmp/bm2/: hpx.csv  hpx_fj.csv  hpx_fj_simd.csv  hpx_simd.csv  hpxmp.csv  hpxmp_simd.csv  omp.csv  omp_simd.csv  seq.csv
miniBUDE/results/x86_64_intel_cct/bm1/: hpx.csv  hpx_fj.csv  omp.csv  seq.csv  tbb_bench.csv
parallel_algorithms/for_each/compute_bound/: CMakeLists.txt  common.hpp  hpx.cpp  hpx_forkjoin.cpp  hpx_main.hpp  main.hpp  omp.cpp  plot.py  seq.cpp  std.cpp  taskflow_bench.cpp  tbb_bench.cpp
parallel_algorithms/for_each/memory_bound/: common.hpp  hpx.cpp  hpx_forkjoin.cpp  omp.cpp  plot.py  run.sh  seq.cpp  std.cpp  taskflow_bench.cpp  tbb_bench.cpp
parallel_algorithms/reduce/count/: common.hpp  hpx.cpp  hpx_forkjoin.cpp  run.sh  seq.cpp  std.cpp  tbb_bench.cpp
parallel_algorithms/reduce/sum/: common.hpp  taskflow_bench.cpp
parallel_algorithms/scan/: common.hpp  hpx.cpp  hpx_forkjoin.cpp  hpx_main.hpp  omp.cpp  seq.cpp  std.cpp  taskflow_bench.cpp  tbb_bench.cpp
parallel_algorithms/sort/: common.hpp  hpx.cpp  hpx_forkjoin.cpp  main.hpp  omp.cpp  seq.cpp  std.cpp  taskflow_bench.cpp  tbb_bench.cpp
